0.6.7
  Entity.KeyGenerator added, implementations added to EntityDefinitionImpl, factory methods to Entities
  IdSource removed
  EntityTableCellRenderer refactored
  TextValueLink.NullFormat moved to Util
  PropertyImpl.setFormat() no longer accepts null values
  PropertyImpl.initializeDefaultFormat() returns Util.NullFormat by default
  TristateValueLink now extends BooleanValueLink
  Database.loadDriver() removed, no longer required, jdbc.drivers system property can be used to specify the driver
  Database implementations load driver classes statically
  Database.createConnection() no longer throws ClassNotFoundException
  ivy configuration added, handles all libraries except for tjws, project 3rd party libraries updated
  ConnectionPools methods synchronized
  Renamed ivy runtime configurations
  MethodLogger refactored and improved
  LogEntry removed
  MethodLogger synchronized, enable/disable implemented
  DatabaseUtil.query() moved back to DatabaseConnection
  PropertyImpl no longer implements Serializable
  Property.PropertyValueFetcher added
  ServerLog now contains the MethodLogger entries instead of the logger itself
  ServerLog renamed ClientLog
  ConnectionPoolImpl.connectionPoolStatistics is now a LinkedList
  JasperReportsWrapper, replaced usage of deprecated method
  LoadTestModel.resetChartData() did not reset failed runs
  EntityImpl, minor optimizations, minimizing the usage of Property.getPropertyID() where possible
  Entity.setValue() overloaded with a validateType parameter, again
  EntityResultPacker calls the above method with false, no need to validate the types coming from the database
  BooleanProperty.toSQLValue() and getColumnType() moved up to ColumnProperty
  EntityConnectionImpl.setParameterValue() simplified, using the above
  PropertyImpl, value fetcher bug fixed, now handles BooleanProperty correctly
  LocalEntityConnectionProvider no longer logs calls to isConnected and isValid
  Petstore demo now uses BooleanProperty